--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   
   header {
     background-color: #f3ede9;
-    height: 100px;
+    height: 10%;
     color: #575656;
     display: flex;
     font-family:Arial, Helvetica, sans-serif;
@@ -181,4 +181,17 @@ body {
     margin-top: 130px;
   }
 
+  @media screen and (max-width: 400px) 
+  {
+    header {
+      width: 100%;
+      background-color: #f3ede9;
+      height: 10%;
+      color: #575656;
+      display: flex;
+      font-family:Arial, Helvetica, sans-serif;
+      width: 100%;
+    }
+  }
+    
   
